// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.core;
option go_package = "chromiumos/tast/internal/protocol";

// FileTransfer is a service to transfer files efficiently.
service FileTransfer {
  // PullDirectory transfers a directory on the DUT as a tar archive.
  // The directory is removed after transfer.
  rpc PullDirectory(PullDirectoryRequest)
      returns (stream PullDirectoryResponse) {}
}

message PullDirectoryRequest {
  // path is a directory path on the DUT.
  string path = 1;
}

message PullDirectoryResponse {
  // data is gzip'ed tar archive data.
  bytes data = 1;
}
